# DPO_Qwen2.5-0.5b

./: .gitignore  README.md  main.ipynb  pyproject.toml
.github/workflows/: publish.yml
